# plasys_house_world

./: CMakeLists.txt  README.md  package.xml
launch/: house.launch.py  view_house.launch.py
models/AudioVideoMediaCabinets_O8c11fbab8c6f_lod0/: model.config  model.sdf  model_manifest.json
models/Bookcases_Ocf3b7a3af58b_lod0/: model.config  model.sdf  model_manifest.json
models/Bookcases_Oe43e7e39f537_lod0/: model.config  model.sdf  model_manifest.json
models/Bookcases_Oea630f7d6252_lod0/: model.config  model_manifest.json
models/Bookcases_Of801682c0062_lod0/: model.config  model.sdf  model_manifest.json
models/Cabinets_O34efdbc7cd71_lod0/: model.config  model.sdf  model_manifest.json
models/ClothesDryer_bb487c6818dc_lod0/: model.config  model_manifest.json
models/CounterWithSink_721b5b3c5cdc_lod0/: model.config  model.sdf  model_manifest.json
models/DishWasher_f2d1aeaead9b_lod0/: model.config  model_manifest.json
models/DoorHingedSingleSwingLeft_O351f940da952_lod0/: model.config  model.sdf  model_manifest.json
models/DoorHingedSingleSwingLeft_O8ab66c006110_lod0/: model.config  model.sdf  model_manifest.json
models/DoorHingedSingleSwingRight_O6596356fe884_lod0/: model.config  model.sdf  model_manifest.json
models/DoorHingedSingleSwingRight_O888a160c5277_lod0/: model.config  model.sdf  model_manifest.json
models/Dressers_O3026d3820106_lod0/: model.config  model.sdf  model_manifest.json
models/FloorLamps_O3abb34e1a719_lod0/: model.config  model.sdf  model_manifest.json
models/FloorLamps_O75326ec60544_lod0/: model.config  model.sdf  model_manifest.json
models/FloorLamps_Oa651b7cbe4d7_lod0/: model.config  model.sdf  model_manifest.json
models/FloorLamps_Oc1b0ac823eb9_lod0/: model.config  model.sdf  model_manifest.json
models/FloorLamps_Occ4b77538a7e_lod0/: model.config  model_manifest.json
models/Fridge_eeb632244952_lod0/: model.config  model_manifest.json
models/Headboards_O84d2b8173e76_lod0/: model.config  (+2 more)
(+257 files in other folders)
