<?xml version="1.0"?>
<package format="3">
  <name>plasys_house_world</name>
  <version>1.0.0</version>
  <description>
    Package containing the home world for the plasys simulation, created with AWS RoboMaker WorldForge.
  </description>

  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</license>

  <maintainer email="ic.pasca.2021@alumnos.urjc.es">Ioana Carmen Pasca</maintainer>
  <maintainer email="a.cruzr.2021@alumnos.urjc.es">Alba Cruz Rodríguez</maintainer>
  <maintainer email="d.garciac.2021@alumnos.urjc.es">Diego García Currás</maintainer>
  <maintainer email="r.sanchezd.2021@alumnos.urjc.es">Rebeca Sánchez Denegri</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
